Maven Update
Updated Maven Wrapper to 3.2.0
Updated Maven to 3.9.5
Minor fixes preparing for Java 21